--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,26 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="preload" href="/fonts/Commissioner-Regular.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/fonts/Commissioner-Bold.woff2" as="font" type="font/woff2" crossorigin>
+  <style>
+    @font-face {
+      font-family: 'Commissioner';
+      font-style: normal;
+      font-weight: 400;
+      src: url("/fonts/Commissioner-Regular.woff2") format('woff2');
+    }
+    @font-face {
+      font-family: 'Commissioner';
+      font-style: normal;
+      font-weight: 700;
+      src: url("/fonts/Commissioner-Bold.woff2") format('woff2');
+    }
+
+    html, body, button {
+      font-family: 'Commissioner', sans-serif;
+    }
+  </style>
   <title>Document</title>
 </head>
 <body>
