--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="preload" href="%BASE_URL%/fonts/Commissioner-Regular.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="%BASE_URL%/fonts/Commissioner-Bold.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="%BASE_URL%/fonts/Commissioner-Black.woff2" as="font" type="font/woff2" crossorigin>
   <style>
     @font-face {
       font-family: 'Commissioner';
@@ -19,6 +20,12 @@
       font-style: normal;
       font-weight: 700;
       src: url("%BASE_URL%/fonts/Commissioner-Bold.woff2") format('woff2');
+    }
+    @font-face {
+      font-family: 'Commissioner';
+      font-style: normal;
+      font-weight: 900;
+      src: url("%BASE_URL%/fonts/Commissioner-Black.woff2") format('woff2');
     }
 
     html, body, button {
